--- a/Modulo3Katas.ipynb
+++ b/Modulo3Katas.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Cuidado!    ¡Se aproxima un asteroide!\n"
+     ]
+    }
+   ],
    "source": [
     "asteroide = 49\n",
     "if asteroide > 25:\n",
@@ -36,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Todo bien esta noche!\n"
+     ]
+    }
+   ],
    "source": [
     "asteroide = 19\n",
     "if asteroide == 20:\n",
@@ -68,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todo esta bien :)\n"
+     ]
+    }
+   ],
    "source": [
     "vel_asteroide = 1\n",
     "tam_asteroide = 1\n",
