--- a/Modulo9Katas.ipynb
+++ b/Modulo9Katas.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte de combustible:\n",
+      "    Porcentaje total: 78.33333333333333%\n",
+      "    Tanque principal: 80%\n",
+      "    Tanque secundario: 70%\n",
+      "    Tanque oxigeno: 85% \n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "print(reporte(80, 70, 85))"
    ]
@@ -54,9 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def porcentaje(values):\n",
     "    total = sum(values)\n",
@@ -75,9 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte de combustible:\n",
+      "    Porcentaje total: 78.0%\n",
+      "    Tanque principal: 88%\n",
+      "    Tanque secundario: 76%\n",
+      "    Tanque oxigeno: 70% \n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def reporte(tanque_0, tanque_1, tanque_2):\n",
     "    return f\"\"\"Reporte de combustible:\n",
@@ -105,9 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Mision a: Luna\n",
+      "    Total del tiempo de viaje: 65 minutos.\n",
+      "    Total del combustible: 500,000.00 litros.\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def reporte_mision(pre_lanzamiento, tiempo_vuelo, destino, tanque_externo, tanque_interno):\n",
     "    return f\"\"\"\n",
@@ -128,9 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Mision a: Luna\n",
+      "    Total del tiempo de viaje: 76 minutos\n",
+      "    Total del combustible: 500,000.00\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def reporte_mision(destino, *minutos, **deposito):\n",
     "    return f\"\"\"\n",
@@ -151,9 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Mision a: Luna.\n",
+      "    Total del tiempo de viaje: 74 minutos.\n",
+      "    Total del combustible: 500,000.00.\n",
+      "    -------------------------------------------------------------------------------\n",
+      "    \n",
+      "        Tanque principal: 300,000.00 litros restantes.\n",
+      "        \n",
+      "        Tanque secundario: 200,000.00 litros restantes.\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
     "def reporte_mision(destino, *minutos, **deposito):\n",
     "    reporte_tanques = f\"\"\"\n",
