--- a/Modulo1Katas.ipynb
+++ b/Modulo1Katas.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is: 2022-02-14\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -33,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 parsec, es: 35.877159999999996 años luz\n"
+     ]
+    }
+   ],
    "source": [
     "#1 parsec es 3.26156 años luz\n",
     "\n",
