--- a/Modulo4Katas.ipynb
+++ b/Modulo4Katas.ipynb
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Interesting facts about the Moon',\n",
+       " \"The Moon is Earth's only satellite\",\n",
+       " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+       " 'On average, the Moon moves 4cm away from the Earth every year',\n",
+       " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+       " 'The highest daylight temperature of the Moon is 127 C.']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "texto = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
     "texto .split(\". \")"
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos De Gravedad Sobre Luna\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"luna\"\n",
     "gravity = 0.00162 # in kms\n",
@@ -148,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,9 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos De Gravedad Sobre \n",
+      "-------------------------------------------------------------------------------- \n",
+      "Nombre Del Planeta: Tierra \n",
+      "Gravedad En Luna: 1.6199999999999999 M/S2 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'{titulo}\\n{datos}'.title())"
    ]
@@ -189,9 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------------------------------------------- \n",
+      "Nombre del planeta: tierra \n",
+      "Gravedad en luna: 1.6199999999999999 m/s2 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "planet = 'Marte '\n",
     "gravity  = 0.00143\n",
@@ -209,9 +256,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Datos de Gravedad sobre: Ganímedes\n",
+      "-------------------------------------------------------------------------------\n",
+      "Nombre del planeta: Marte \n",
+      "Gravedad en Ganímedes: 0.00143 m/s2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "plantilla_nueva = \"\"\"\n",
     "Datos de Gravedad sobre: {name}\n",
@@ -231,9 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Datos de Gravedad sobre: Ganímedes\n",
+      "-------------------------------------------------------------------------------\n",
+      "Nombre del planeta: Marte \n",
+      "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(plantilla_nueva.format(name=name, planet=planet, gravity=gravity*1000))"
    ]
