--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Ejercicios"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open(\"/path/to/mars.jpg\")"
+   ]
   }
  ],
  "metadata": {
