crear un archivo de Python

--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -15,6 +15,19 @@
    "source": [
     "open(\"/path/to/mars.jpg\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    open(\"/path/to/mars.jpg\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
