--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -28,11 +28,32 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    open('config.txt')\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Couldn't find the config.txt file!\")"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4b57680f947797efd172336bdac56d314a4485b1aff1f63fff2a9a40c1a00cb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
