--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -40,6 +40,23 @@
     "except FileNotFoundError:\n",
     "    print(\"Couldn't find the config.txt file!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        configuration = open('config.txt')\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Couldn't find the config.txt file!\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
