--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -57,6 +57,23 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        configuration = open('config.txt')\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Couldn't find the config.txt file!\")\n",
+    "    except IsADirectoryError:\n",
+    "        print(\"Found config.txt but it is a directory, couldn't read it\")\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
