--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -93,6 +93,23 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        open('mars.jpg')\n",
+    "    except FileNotFoundError as err:\n",
+    "        print(\"got a problem trying to read the file:\", err)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
