--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -110,6 +110,26 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        open(\"config.txt\")\n",
+    "    except OSError as err:\n",
+    "        if err.errno == 2:\n",
+    "            print(\"Couldn't find the config.txt file!\")\n",
+    "        elif err.errno == 13:\n",
+    "            print(\"Found config.txt but couldn't read it\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
