--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicios"
+    "# Ejercicios\n",
+    "\n",
+    "## Tracebacks"
    ]
   },
   {
@@ -129,6 +131,27 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generación de excepciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def water_left(astronauts, water_left, days_left):\n",
+    "    daily_usage = astronauts * 11\n",
+    "    total_usage = daily_usage * days_left\n",
+    "    total_water_left = water_left - total_usage\n",
+    "    return f\"Total water left after {days_left} days is: {total_water_left} liters\"\n",
+    "water_left(5, 100, 2)"
    ]
   }
  ],
