--- a/Modulo10Katas.ipynb
+++ b/Modulo10Katas.ipynb
@@ -153,6 +153,22 @@
     "    return f\"Total water left after {days_left} days is: {total_water_left} liters\"\n",
     "water_left(5, 100, 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def water_left(astronauts, water_left, days_left):\n",
+    "    daily_usage = astronauts * 11\n",
+    "    total_usage = daily_usage * days_left\n",
+    "    total_water_left = water_left - total_usage\n",
+    "    if total_water_left < 0:\n",
+    "        raise RuntimeError(f\"There is not enough water for {astronauts} astronauts after {days_left} days!\")\n",
+    "    return f\"Total water left after {days_left} days is: {total_water_left} liters\"\n",
+    "water_left(5, 100, 2)"
+   ]
   }
  ],
  "metadata": {
